# whisper-macos-live-transcription

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
