[project]
name = "whisper-mac-record"
version = "0.1.0"
description = "A macOS desktop application for audio transcription using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "pyqt6>=6.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
whisper-record = "src.main:main"
